fixed share migrations
